# rust-of-clans

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: client.rs  errors.rs  lib.rs  models.rs  requests.rs
src/clans/: models.rs  requests.rs
src/goldpass/: models.rs  requests.rs
src/leagues/: models.rs  requests.rs
src/players/: models.rs  requests.rs
