[package]
name = "rust_of_clans"
version = "0.5.2"
edition = "2021"
authors = ["Mikkel Aas <aa.mikkel2902@gmail.com>"]
description = "A Clash of Clans API client"
license = "MIT"
repository = "https://github.com/MikkelAas/rust-of-clans"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
urlencoding = "2.1.2"
